--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0"
+    "pino-pretty": "^11.0.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
